--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Tryinteract</string>
+    <string name="city_name">City name</string>
+    <string name="search">Search</string>
+    <string name="todo">TODO</string>
+    <string name="landon_us">Landon, US</string>
+    <string name="_20_c">20 °C</string>
 </resources>
